# Agent_Eval

./: .env.example  .gitignore  README.md  pyproject.toml
Hutool/: pr_1263.md  pr_630.md  pr_692.md
MindSpore/: pr_90051.md  pr_90629.md  pr_90911.md
Prompts/Hutool/: pr_1263_v1.md  pr_1263_v3.md  pr_630_v2.md  pr_692_v1.md  pr_692_v2.md
Prompts/MindSpore/: pr_90051_v3.md  pr_90629_v1.md  pr_90629_v2.md  pr_90911_v1.md  pr_90911_v2.md  pr_90911_v3.md
Prompts/Openharmony/: pr_571_v1.md  pr_571_v2.md  pr_571_v3.md
Prompts/Pytorch/: pr_123811_v3.md  pr_163081_v3.md
Prompts/Triton-Ascend/: pr_17_v1.md  pr_17_v2.md  pr_17_v3.md  pr_71_v1.md
Pytorch/: pr_123811.md  pr_135433.md  pr_163081.md
Triton-Ascend/: pr_17.md  pr_333.md  pr_71.md
agent_eval/: cli.py  fetcher.py  patch_parser.py  renderer.py  simplifier.py  templates.py
agent_eval/evaluate/: command.py  evaluator.py  llm_client.py  prompt_template.py
agent_eval/generate/: command.py  fetcher.py  patch_parser.py  renderer.py  simplifier.py  templates.py
agent_eval/run/: command.py  git_helpers.py  model_resolver.py  opencode_client.py  patch_utils.py  trajectory.py
evaluation_scores/Hutool/: pr_692_v1.json
prompt_variants/Hutool/: pr_1263_v2.md  pr_630_v1.md  pr_630_v3.md  pr_692_v3.md
prompt_variants/MindSpore/: pr_90051_v1.md  pr_90051_v2.md  pr_90629_v3.md
scripts/: check_opencode_server.py  reset_workspace.sh  test_generate_patch.py
tasks/: eval_task.sh
tests/: test_evaluate.py  test_generate.py  test_llm_patch_generator.py  test_run_lifecycle.py
toolkits/: llm_patch_generator.py
(+28 files in other folders)
